# hotel-booking-app

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  Dockerfile.nginx  Dockerfile.patch  README.md  alembic.ini  blackbox.yml  celerybeat-schedule.db  docker-compose-ci.yml  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  hotels.py  loki-config.yaml  main.py  nginx.conf  nginx.local.conf  prometheus.yml  promtail-config.yaml  pyproject.toml  pytest.ini  tempo.yaml
.playwright-mcp/: page-2026-04-03T07-26-03-011Z.yml  page-2026-04-03T07-26-22-091Z.yml  page-2026-04-03T07-27-14-062Z.yml  page-2026-04-03T07-27-30-616Z.yml  page-2026-04-03T07-28-47-591Z.yml  page-2026-04-03T07-29-23-156Z.yml  page-2026-04-03T07-29-33-380Z.yml  page-2026-04-03T07-29-41-809Z.yml  page-2026-04-03T07-30-48-263Z.yml  page-2026-04-17T16-03-38-612Z.yml  page-2026-04-17T16-04-28-270Z.yml  page-2026-04-17T16-04-53-415Z.yml  page-2026-04-17T16-05-03-132Z.yml  page-2026-04-17T16-05-15-191Z.yml  page-2026-04-17T16-05-33-530Z.yml
docs/: DEVELOPER_GUIDE.md  api.md  architecture.md  celery.md  deployment.md  faq.md  getting-started.md  migrations.md  observability.md  runbooks.md  testing.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.css
grafana/: datasources.yaml
grafana/alerting/: 1-mute-timings.yaml  alert-rules.yaml  contact-points.yaml  contact-points.yaml.example  notification-policy.yaml
schemas/: hotels.py
src/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  limiter.py  logging_config.py  main.py  tracing.py  validators.py
src/api/: auth.py  bookings.py  dependencies.py  facilities.py  health.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/elastic/: client.py  hotels.py
src/middleware/: json_error_handler.py  (+2 more)
tests/: conftest.py  mock_hotels.json
(+155 files in other folders)
