[project]
name = "hotel-booking-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]
