[project]
name = "hotel-booking-app"
version = "0.1.0"
description = "REST API for hotel search and booking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "celery>=5.5.3",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sentry-sdk[fastapi]>=2.35.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.13.2",
]

[tool.ruff]
line-length = 100
